--- a/album.html
+++ b/album.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Album — Music Library</title>
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <header class="navbar">
@@ -12,7 +12,7 @@
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="music.html">Music</a>
-      <a href="admin/login.html">Admin</a>
+      <a href="login.html">Admin</a>
     </nav>
     <div>
       <button class="toggle-dark" aria-label="Toggle theme">Toggle</button>
