--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admin Dashboard — Music Library</title>
-  <link rel="stylesheet" href="../css/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <header class="admin-nav">
@@ -75,6 +75,6 @@
     });
   </script>
 
-  <script src="../js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
