--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admin Login — Music Library</title>
-  <link rel="stylesheet" href="../css/main.css" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <div style="min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px">
@@ -21,6 +21,6 @@
     </div>
   </div>
 
-  <script src="../js/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
