--- a/login.html
+++ b/login.html
@@ -1,26 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Admin Login — Music Library</title>
-  <link rel="stylesheet" href="main.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin Login - Get Vibes</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div style="min-height:100vh;display:flex;align-items:center;justify-content:center;padding:24px">
-    <div class="login-container" style="max-width:420px;">
-      <h2 style="margin-bottom:12px">Admin Login</h2>
-
-      <form id="loginForm" onsubmit="loginAdmin(event)">
-        <input id="username" name="username" placeholder="Username" required />
-        <input id="password" type="password" name="password" placeholder="Password" required />
-        <button type="submit">Login</button>
-      </form>
-
-      <p id="login-error" style="color:#ff8080;margin-top:10px"></p>
-    </div>
+  <div class="login-container">
+    <h2>Admin Login</h2>
+    <form id="admin-login-form">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+      <p id="login-message"></p>
+    </form>
   </div>
 
-  <script src="main.js"></script>
+  <script src="../main.js"></script>
 </body>
 </html>
