--- a/index.html
+++ b/index.html
@@ -1,40 +1,84 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Get Vibes - Home</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Get Vibes — Home</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <header class="header">
-    <h1>🎵 Get Vibes Music Library</h1>
-    <nav>
-      <a href="music.html">Music</a>
-      <a href="album.html">Albums</a>
-      <a href="login.html">Admin</a>
-    </nav>
-  </header>
-
-  <main class="home-content">
-    <section class="new-releases">
-      <h2>New Releases</h2>
-      <div id="new-releases-container" class="cards-container">
-        <!-- New releases loaded dynamically -->
+  <div class="app">
+    <aside class="sidebar">
+      <div class="brand">
+        <div class="logo">Get<span>Vibes</span></div>
       </div>
-    </section>
+      <nav class="side-nav">
+        <a class="nav-item active" href="index.html">Home</a>
+        <a class="nav-item" href="music.html">Music</a>
+        <a class="nav-item" href="album.html">Albums</a>
+        <a class="nav-item" href="admin/login.html">Admin</a>
+      </nav>
+      <div class="sidebar-footer">© 2025 Get Vibes</div>
+    </aside>
 
-    <section class="featured-albums">
-      <h2>Featured Albums</h2>
-      <div id="albums-container" class="cards-container">
-        <!-- Albums loaded dynamically -->
+    <main class="main">
+      <header class="topbar">
+        <div class="search-wrap">
+          <input id="global-search" class="search" placeholder="Search songs, artists, albums..." />
+        </div>
+        <div class="actions">
+          <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
+        </div>
+      </header>
+
+      <section class="home-hero">
+        <div class="hero-left">
+          <h1>Discover music that moves you</h1>
+          <p class="muted">Stream, upload and share — built for creators and fans.</p>
+        </div>
+        <div class="hero-right">
+          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='420' height='240'%3E%3Crect width='100%25' height='100%25' fill='%23121'/%3E%3Ctext x='50%25' y='50%25' fill='%23ff6a00' font-size='24' font-family='Arial' text-anchor='middle' dy='.3em'%3EGet Vibes%3C/text%3E%3C/svg%3E" alt="">
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="section-head">
+          <h2>New Releases</h2>
+          <a class="view-all" href="music.html">View all</a>
+        </div>
+        <div id="new-releases" class="cards-grid"></div>
+      </section>
+
+      <section class="section">
+        <div class="section-head">
+          <h2>Featured Albums</h2>
+          <a class="view-all" href="album.html">Browse albums</a>
+        </div>
+        <div id="featured-albums" class="cards-grid"></div>
+      </section>
+    </main>
+  </div>
+
+  <!-- Player (global footer) -->
+  <div class="player-footer" id="player-footer">
+    <div class="player-inner">
+      <img id="pf-cover" class="pf-cover" src="img/default-cover.png" alt="cover">
+      <div class="pf-meta">
+        <div id="pf-title">No track selected</div>
+        <div id="pf-artist" class="muted">—</div>
       </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <p>&copy; 2025 Get Vibes. All rights reserved.</p>
-  </footer>
+      <div class="pf-controls">
+        <button id="pf-prev" class="control">⏮</button>
+        <button id="pf-play" class="control">▶</button>
+        <button id="pf-pause" class="control" style="display:none">⏸</button>
+        <button id="pf-next" class="control">⏭</button>
+      </div>
+      <div class="pf-range">
+        <input id="pf-seek" type="range" min="0" value="0">
+        <div class="pf-times"><span id="pf-current">00:00</span> / <span id="pf-duration">00:00</span></div>
+      </div>
+    </div>
+  </div>
 
   <script src="main.js"></script>
 </body>
