--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="nav-item active" href="index.html">Home</a>
         <a class="nav-item" href="music.html">Music</a>
         <a class="nav-item" href="album.html">Albums</a>
-        <a class="nav-item" href="admin/login.html">Admin</a>
+        <a class="nav-item" href="login.html">Admin</a>
       </nav>
       <div class="sidebar-footer">© 2025 Get Vibes</div>
     </aside>
