--- a/album.html
+++ b/album.html
@@ -1,40 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Get Vibes - Album</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Get Vibes — Album</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <header class="header">
-    <h1>Albums</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="music.html">Music</a>
-      <a href="login.html">Admin</a>
-    </nav>
-  </header>
+  <div class="app">
+    <aside class="sidebar">
+      <div class="brand"><div class="logo">Get<span>Vibes</span></div></div>
+      <nav class="side-nav">
+        <a class="nav-item" href="index.html">Home</a>
+        <a class="nav-item" href="music.html">Music</a>
+        <a class="nav-item active" href="album.html">Albums</a>
+        <a class="nav-item" href="login.html">Admin</a>
+      </nav>
+      <div class="sidebar-footer">© 2025 Get Vibes</div>
+    </aside>
 
-  <main class="album-songs-container" id="album-songs-container">
-    <!-- Songs of selected album loaded dynamically -->
-  </main>
-
-  <footer class="audio-player-container">
-    <div class="player">
-      <img id="audio-cover" src="img/default-cover.png" alt="Cover" class="player-cover">
-      <div class="player-info">
-        <h3 id="audio-title">Select a song</h3>
-        <div class="player-controls">
-          <button id="prev-btn" class="control-btn">⏮️</button>
-          <button id="play-btn" class="control-btn">▶️</button>
-          <button id="pause-btn" class="control-btn" style="display:none;">⏸️</button>
-          <button id="next-btn" class="control-btn">⏭️</button>
+    <main class="main">
+      <header class="topbar">
+        <div class="search-wrap">
+          <input id="album-search" class="search" placeholder="Search albums..." />
         </div>
+        <div class="actions">
+          <button id="theme-toggle-3" aria-label="Toggle theme">🌓</button>
+        </div>
+      </header>
+
+      <section class="section">
+        <div class="section-head">
+          <h2 id="album-title">Album</h2>
+          <a id="back-to-albums" href="index.html" class="view-all">Back</a>
+        </div>
+
+        <div id="album-info" class="album-info">
+          <!-- album cover + meta -->
+        </div>
+
+        <div id="album-songs" class="rows-grid">
+          <!-- album songs -->
+        </div>
+      </section>
+    </main>
+  </div>
+
+  <!-- Player footer -->
+  <div class="player-footer" id="player-footer">
+    <div class="player-inner">
+      <img id="pf-cover" class="pf-cover" src="img/default-cover.png" alt="cover">
+      <div class="pf-meta">
+        <div id="pf-title">No track selected</div>
+        <div id="pf-artist" class="muted">—</div>
       </div>
-      <audio id="audio-player" style="display:none;"></audio>
+      <div class="pf-controls">
+        <button id="pf-prev" class="control">⏮</button>
+        <button id="pf-play" class="control">▶</button>
+        <button id="pf-pause" class="control" style="display:none">⏸</button>
+        <button id="pf-next" class="control">⏭</button>
+      </div>
+      <div class="pf-range">
+        <input id="pf-seek" type="range" min="0" value="0">
+        <div class="pf-times"><span id="pf-current">00:00</span> / <span id="pf-duration">00:00</span></div>
+      </div>
     </div>
-  </footer>
+  </div>
 
   <script src="main.js"></script>
 </body>
