--- a/music.html
+++ b/music.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Get Vibes — Music</title>
   <link rel="stylesheet" href="main.css">
 </head>
@@ -11,25 +10,20 @@
     <aside class="sidebar">
       <div class="brand"><div class="logo">Get<span>Vibes</span></div></div>
       <nav class="side-nav">
-        <a class="nav-item" href="index.html">Home</a>
-        <a class="nav-item active" href="music.html">Music</a>
-        <a class="nav-item" href="album.html">Albums</a>
-        <a class="nav-item" href="login.html">Admin</a>
+        <a class="nav-item" href="index.html"><i>🏠</i><span>Home</span></a>
+        <a class="nav-item active" href="music.html"><i>🎧</i><span>Music</span></a>
+        <a class="nav-item" href="album.html"><i>📀</i><span>Albums</span></a>
+        <a class="nav-item" href="admin/login.html"><i>🔐</i><span>Admin Login</span></a>
       </nav>
-      <div class="sidebar-footer">© 2025 Get Vibes</div>
     </aside>
 
     <main class="main">
       <header class="topbar">
-        <div class="search-wrap">
-          <input id="music-search" class="search" placeholder="Search songs or artists..." />
-        </div>
-        <div class="actions">
-          <button id="theme-toggle-2" aria-label="Toggle theme">🌓</button>
-        </div>
+        <input id="music-search" class="search" placeholder="Search songs or artists..." />
+        <div class="actions"><button id="theme-toggle-2">🌓</button></div>
       </header>
 
-      <section class="music-grid-wrap">
+      <div class="music-grid-wrap">
         <aside class="filters">
           <h3>Filters</h3>
           <div class="filter-item">
@@ -43,13 +37,13 @@
             <h2>All Songs</h2>
             <div id="songs-count" class="muted"></div>
           </div>
+
           <div id="songs-grid" class="rows-grid"></div>
         </section>
-      </section>
+      </div>
     </main>
   </div>
 
-  <!-- Player footer (same as index) -->
   <div class="player-footer" id="player-footer">
     <div class="player-inner">
       <img id="pf-cover" class="pf-cover" src="img/default-cover.png" alt="cover">
