--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Admin Login — Get Vibes</title>
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div class="center-page">
@@ -12,10 +11,10 @@
       <h2>Admin Sign In</h2>
       <form id="admin-login-form">
         <label class="label">Email
-          <input id="admin-email" type="email" required>
+          <input id="admin-email" type="email" required />
         </label>
         <label class="label">Password
-          <input id="admin-password" type="password" required>
+          <input id="admin-password" type="password" required />
         </label>
         <div class="form-actions">
           <button type="submit" class="btn primary">Sign In</button>
@@ -25,6 +24,6 @@
     </div>
   </div>
 
-  <script src="../main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
